@@ -15,6 +15,18 @@
     </properties>
 
     <dependencies>
+        <!-- Log4j2 dependencies -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.17.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.17.1</version>
+        </dependency>
+
         <!-- JavaFX dependencies -->
         <dependency>
             <groupId>org.openjfx</groupId>
@@ -27,13 +39,7 @@
             <version>23.0.1</version>
         </dependency>
 
-        <!-- Apache POI dependencies for handling .doc and .docx files -->
-        <dependency>
-            <groupId>org.apache.poi</groupId>
-            <artifactId>poi</artifactId>
-            <version>5.2.3</version>
-        </dependency>
-
+        <!-- Apache POI for handling .docx files -->
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
@@ -71,7 +77,6 @@
 
     <build>
         <plugins>
-            <!-- Maven Compiler Plugin to use Java 22 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -82,17 +87,12 @@
                 </configuration>
             </plugin>
 
-            <!-- JavaFX Maven Plugin for packaging and running the JavaFX application -->
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.5</version>
                 <configuration>
-                    <mainClass>com.caseprocessor.App</mainClass>
-                    <jvmArgs>
-                        --module-path "E:/javafx/openjfx-23.0.1_windows-x64_bin-sdk/javafx-sdk-23.0.1/lib"
-                        --add-modules javafx.controls,javafx.fxml
-                    </jvmArgs>
+                    <mainClass>com.caseprocessor.ui.MainWindow</mainClass>
                 </configuration>
             </plugin>
         </plugins>
